--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.0.0",
     "bootstrap": "^5.2.2",
     "font-awesome": "^4.7.0",
+    "get-google-fonts": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
